<resources>
    <string name="app_name">DappTest</string>
    <string name="url_dapp">Url Dapp</string>
    <string name="name">Name</string>
    <string name="url_logo">Url logo</string>
    <string name="connect_wallet_mode_debug">Connect wallet debug</string>
    <string name="connect_wallet_mode_release">Connect wallet release</string>
    <string name="code">Code</string>
    <string name="message">Message</string>
    <string name="address">Address</string>
    <string name="get_data">get data</string>
    <string name="send_token">Send Token</string>
    <string name="send_nft">send nft</string>
    <string name="sell_nft">Sell Nft</string>
    <string name="buy_nft">buy nft</string>
    <string name="approved_buy_nft">Approved Buy Nft</string>
    <string name="approved_sell_nft">Approved sell nft</string>
    <string name="approved_deposit">Approved Deposit</string>
    <string name="deposit">Deposit</string>
    <string name="approved_unlock_box">Approved unlock box</string>
    <string name="unlock_box">Unlock box</string>
    <string name="open_box">Open box</string>
    <string name="btc">BTC</string>
    <string name="sol">SOL</string>
    <string name="bsc">BSC</string>
    <string name="eth">ETH</string>
    <string name="chain_connect">Chain connect</string>
    <string name="multi_chain">Multi chain</string>
    <string name="result">result</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnect_multi_chain">disconnect Multi Chain</string>
    <string name="disconnect_btc">disconnect BTC</string>
    <string name="disconnect_eth">disconnect ETH</string>
    <string name="disconnect_bsc">disconnect BSC</string>
    <string name="disconnect_sol">disconnect SOL</string>
    <string name="network_blockchain">Network Blockchain</string>
    <string name="wallet_connect">Wallet Connect</string>
    <string name="transfer_token">Transfer Token</string>
    <string name="transfer_nft">Transfer Nft</string>
    <string name="connect">Connect</string>
    <string name="todo">TODO</string>
    <string name="contract_address">Contract address</string>
    <string name="address_receive">Address receive</string>
    <string name="amount">Amount</string>
    <string name="wallet_type">Wallet type</string>
    <string name="network">Network</string>
    <string name="approve_buy_nft">Approve buy nft</string>
    <string name="change_connect_type">Change connect type</string>
    <string name="select_wallet_is_connected">Select wallet is connected</string>
    <string name="button">Button</string>
    <string name="nft">nft</string>
    <string name="approve_deposit_nft">Approve deposit nft</string>
    <string name="deposit_nft">Deposit Nft</string>
    <string name="transfer_box">Transfer box</string>
    <string name="approved_deposit_token">Approved deposit token</string>
    <string name="deposit_token">Deposit token</string>
    <string name="buy_box">Buy box</string>
    <string name="send_box">Send box</string>
    <string name="approve_buy_box">Approve buy box</string>
    <string name="cancel_transaction">Cancel transaction</string>
    <string name="with_draw">With draw</string>
    <string name="approve_stake_nft">Approve stake nft</string>
    <string name="stake_nft">stake nft</string>
    <string name="unstake_nft">Unstake Nft</string>

</resources>